cirkelbewegingn bij devcourse

--- a/SPC/semester1_dev.tex
+++ b/SPC/semester1_dev.tex
@@ -48,7 +48,7 @@
 
 \activitychapter{../kinematica/2dim_intro.tex}
 \activitychapter{../kinematica/2dim_onafhankelijkheidsbeginsel.tex}
-%activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex}    % causes next file to fail compilation with 'Missing {}' 
+activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex}   
 \activitychapter{../kinematica/2dim_horizontale_worp.tex}
 
 
@@ -69,7 +69,7 @@
 
 \activitychapter{../dynamica/toep_intro.tex}
 \activitychapter{../dynamica/toep_algemeen.tex}
-%\activitychapter{../dynamica/toep_krachten.tex}
+\activitychapter{../dynamica/toep_krachten.tex}
 \activitychapter{../dynamica/toep_dynamica_ECB.tex}
 
 
