command weg  \newcommand \ul

--- a/dynamica/toep_krachten.tex
+++ b/dynamica/toep_krachten.tex
@@ -2,7 +2,6 @@
 
 %\addPrintStyle{..}
 
-\newcommand{\ul}[1]{#1}
 
 \begin{document}
 	\author{Bart Lambregs}
@@ -119,7 +118,7 @@ Speciaal geval: Heel vaak werken op een ondergedompeld voorwerp slechts twee kra
 
 \begin{itemize}
 \item
-  Indien in dit geval het voorwerp \ul{volledig ondergedompeld} is, is
+  Indien in dit geval het voorwerp volledig ondergedompeld is, is
   \(V_{ond} = V_{vw}\) waardoor enkel de massadichtheden een verschil in
   grootte tussen de twee krachten kunnen opleveren, met als gevolg:
 \end{itemize}
@@ -128,7 +127,7 @@ Speciaal geval: Heel vaak werken op een ondergedompeld voorwerp slechts twee kra
 
 \begin{itemize}
 \item
-  Als het voorwerp \ul{gedeeltelijk ondergedompeld} is, dan is
+  Als het voorwerp gedeeltelijk ondergedompeld is, dan is
   \(V_{ond} < V_{vw}\) en moet men ook met de volumes rekening houden om
   het gedrag te bepalen. Merk op dat in deze situatie bij drijven (=
   rustsituatie waarbij slechts een gedeelte van het voorwerp
@@ -248,7 +247,7 @@ steunt, evenwijdig met het vlak (en vaak tegen de zin van de beweging)
 Verklaring schuifwrijving: een vlakke ondergrond is nooit perfect vlak!
 Zie figuur.
 
-Voor de \ul{schuif}wrijvingskracht \({\overrightarrow{F}}_{w}\) wordt vastgesteld dat\ldots{}
+Voor de schuifwrijvingskracht \({\overrightarrow{F}}_{w}\) wordt vastgesteld dat\ldots{}
 
 \begin{enumerate}
 \item\ldots indien het voorwerp in rust is: \({\overrightarrow{F}}_{w}\) heeft die grootte en zin zodat \(F_{r} = 0\)
