--- a/kinematica/1dim_verticale_worp.tex
+++ b/kinematica/1dim_verticale_worp.tex
@@ -121,8 +121,12 @@ De gemiddelde snelheid vinden we door de totale afgelegde weg te delen door de t
 \end{oplossing}
 \end{exercise}
 
-\begin{expandable}{xmdonothing}{Een universiteitscollege over de leerstof van dit hoofdstuk.}
+\begin{xmuitweiding}[Een universiteitscollege over de leerstof van dit hoofdstuk.]
 	\youtube{q9IWoQ199_o}
-\end{expandable}
+\end{xmuitweiding}
+
+% \begin{expandable}{xmuitweiding}{Een universiteitscollege over de leerstof van dit hoofdstuk.}
+% 	\youtube{q9IWoQ199_o}
+% \end{expandable}
 
 \end{document}
