--- a/vectoren/vectoren_begrip.tex
+++ b/vectoren/vectoren_begrip.tex
@@ -35,9 +35,9 @@ De plaats waarop de vector van toepassing is, noemt men het aangrijpingspunt van
 
 
 
-\begin{expandable}{xmdonothing}{Een universiteitscollege over dit hoofdstuk}
+\begin{xmuitweiding}[Een universiteitscollege over dit hoofdstuk]
     \youtube{0na1JdPE_JY}
-\end{expandable}
+\end{xmuitweiding}
 
 % Opmerking eruit gelaten wegens verwarring bij de leerlingen (vincent)
 % \begin{remark}
